# electromotor-nmodel

./: .Description  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  electromotor-nmodel.pc  electromotor-nmodel.pc.in
cmake.modules/: FindYamlCpp.cmake
configs/: RGA.yaml  SGA.yaml  ST.yaml
include/: CMakeLists.txt  EMConfig.hpp  ElectromotorModel.hpp  ElectromotorModelSimulator.hpp  ElectromotorModelStd.hpp  EvaluationUtilities.hpp  ModelOutput.hpp  ProblemConfig.hpp  Singleton.hpp  common.hpp  emmodelGAFit.h
plot/: IPIs_time.plot  model_nvoltages.plot  model_synapses.plot
scripts/: IPIs.py  run-GA.sh  run-model.sh
src/: CMakeLists.txt  emmodel.cpp  emmodelGAFit.cpp
